--- a/Accueil.html
+++ b/Accueil.html
@@ -92,6 +92,9 @@
     </div>
   </section>
   <!-- End Part 02 -------------------------------------------------------------------->
+  <div class="test">
+
+  </div>
 
 
   <!-- Part 03 -------------------------------------------------------------------->
