--- a/Accueil.html
+++ b/Accueil.html
@@ -54,14 +54,14 @@
   <!-- Part 02 -------------------------------------------------------------------->
   <section>
     <div class="whiteBoard">
-      <h1 data-aos="fade-up" data-aos-once="true" data-aos-offset="300" data-aos-duration="1500">Bienvenue à la charité <span style="color:#2c5f2d;">help</span><span style="color:#79be21;">me</span></h1>
-      <h2 data-aos="fade-up" data-aos-once="true" data-aos-offset="240" data-aos-duration="2500">Nous sommes une plate-forme caritative indépendante gérée par des assossiations Algériennes certifiés,
+      <h1 data-aos="fade-up" data-aos-once="true" data-aos-offset="300" data-aos-duration="1000">Bienvenue à la charité <span style="color:#2c5f2d;">help</span><span style="color:#79be21;">me</span></h1>
+      <h2 data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">Nous sommes une plate-forme caritative indépendante gérée par des assossiations Algériennes certifiés,
          nous atteignons tous les coins du pays en partageant l'espoir et en donnons l'aide à tous qui ont besoin,
           que ca soit  en domaine : Éducative, Santé ... etc. Chaque jour, de plus en plus d'assossiations et des donateurs se joignent
           et participent à nos œuvres caritatives, avec cela le nombre de nos projets financés ne cesse d'augmenter
           et les gens trouvent avec qui partager leur joie. Avec votre aide, nous pouvons atteindre plus de personnes et résoudre leurs problèmes.</h2>
       <ul>
-        <li data-aos="fade-up" data-aos-once="true" data-aos-offset="230" onclick="location.href='#'"; style="cursor:pointer;";>
+        <li data-aos="fade-up" data-aos-once="true" data-aos-offset="50" onclick="location.href='#'"; style="cursor:pointer;";>
           <img id="img1" src="./Resources/Yacine/CA_Education.png">
           <img id="img1" src="./Resources/Yacine/CA_Education_SL.png">
           <h3>Education</h3>
@@ -70,7 +70,7 @@
             collecter plus d'argent pour s'inscrire à une bourse ...
             Votre aide est vraiment apprécié car ils sont l'avenir de demain.</h4>
         </li>
-        <li data-aos="fade-up" data-aos-once="true" data-aos-offset="230" onclick="location.href='#'"; style="cursor:pointer;";>
+        <li data-aos="fade-up" data-aos-once="true" data-aos-offset="50" onclick="location.href='#'"; style="cursor:pointer;";>
           <img id="img2" src="./Resources/Yacine/CA_Health.png">
           <img id="img2" src="./Resources/Yacine/CA_Health_SL.png">
           <h3>Santé</h3>
@@ -79,7 +79,7 @@
             collecter plus d'argent pour s'inscrire à une bourse ...
             les aider est vraiment apprécié car ils sont l'avenir de demain.</h4>
         </li>
-        <li data-aos="fade-up" data-aos-once="true" data-aos-offset="230" onclick="location.href='#'"; style="cursor:pointer;";>
+        <li data-aos="fade-up" data-aos-once="true" data-aos-offset="50" onclick="location.href='#'"; style="cursor:pointer;";>
           <img id="img3" src="./Resources/Yacine/CA_Other.png">
           <img id="img3" src="./Resources/Yacine/CA_Other_SL.png">
           <h3>Autres</h3>
@@ -92,7 +92,7 @@
     </div>
   </section>
   <!-- End Part 02 -------------------------------------------------------------------->
-  <div class="test">
+  <div class="Stats">
 
   </div>
 
