--- a/Accueil.html
+++ b/Accueil.html
@@ -65,39 +65,63 @@
           <img id="img1" src="./Resources/Yacine/CA_Education.png">
           <img id="img1" src="./Resources/Yacine/CA_Education_SL.png">
           <h3>Education</h3>
-          <h4>cette catégorie est proposée à ceux qui ont besoin d'aide pour des objectifs éducatifs qu'ils soit :
-            Étudiants, Enseignants ... Ici, ils peuvent demander de l'aide pour rembourser leur dette étudiante,
-            collecter plus d'argent pour s'inscrire à une bourse ...
+          <h4>Cette catégorie est proposée à ceux qui ont besoin d'aide pour des objectifs éducatifs qu'ils soit :
+            Étudiants, Enseignants ... Ici, ils peuvent demander de l'aide pour Rembourser leur dette étudiante,
+            Collecter plus d'argent pour s'inscrire à une bourse ...
             Votre aide est vraiment apprécié car ils sont l'avenir de demain.</h4>
         </li>
         <li data-aos="fade-up" data-aos-once="true" data-aos-offset="50" onclick="location.href='#'"; style="cursor:pointer;";>
           <img id="img2" src="./Resources/Yacine/CA_Health.png">
           <img id="img2" src="./Resources/Yacine/CA_Health_SL.png">
           <h3>Santé</h3>
-          <h4>cette catégorie est proposée à ceux qui ont besoin d'aide pour des objectifs éducatifs que ce soit:
-            étudiants, enseignants ... Ici, ils peuvent demander de l'aide pour rembourser leur dette étudiante,
-            collecter plus d'argent pour s'inscrire à une bourse ...
-            les aider est vraiment apprécié car ils sont l'avenir de demain.</h4>
+          <h4>Cette partie de la plateforme est dédiée à ceux qui ont besoin de soins médicaux urgents :
+            Chirurgies, Paiement d'un fauteuil roulant, Don de sang ... Cette catégorie est aussi offerte aux personnels médicaux
+            & aux hôpitaux qui ont besoin de nouveaux équipements et technologies. Les dons ici sont toujours appréciés.</h4>
         </li>
         <li data-aos="fade-up" data-aos-once="true" data-aos-offset="50" onclick="location.href='#'"; style="cursor:pointer;";>
           <img id="img3" src="./Resources/Yacine/CA_Other.png">
           <img id="img3" src="./Resources/Yacine/CA_Other_SL.png">
           <h3>Autres</h3>
-          <h4>cette catégorie est proposée à ceux qui ont besoin d'aide pour des objectifs éducatifs que ce soit:
-            étudiants, enseignants ... Ici, ils peuvent demander de l'aide pour rembourser leur dette étudiante,
-            collecter plus d'argent pour s'inscrire à une bourse ...
-            les aider est vraiment apprécié car ils sont l'avenir de demain.</h4>
+          <h4>Ici, vous trouverez tout ce qui n'est pas lié à la santé ou à l'éducation, cela varie Des dons physiques, Du financement pour construire
+            des camps pour les sans-abri ou bien pour la plantation des arbres en masse pour lutter contre la déforestation.
+            Les dons ici affectent directement la communauté, donc chaque dinar compte.</h4>
         </li>
       </ul>
     </div>
   </section>
   <!-- End Part 02 -------------------------------------------------------------------->
-  <div class="Stats">
-
-  </div>
 
 
   <!-- Part 03 -------------------------------------------------------------------->
+  <section>
+    <div class="Stats">
+      <h1>Statistiques Techniques</h1>
+      <h2>Depuis nos débuts en 2016, de nombreux événements sont passées et pour montrer ce que nous avons donné à la communauté,
+        nous avons rassemblé ces analyses qui représentent le travail acharné que nous faisons ici.</h2>
+      <ul>
+        <li>
+          <img id="img1_1" src="./Resources/Yacine/STAT_Fund_Raised.png">
+          <h3>€ 73,8 M</h3>
+          <h4>Fonds Levés</h4>
+        </li>
+        <li>
+          <img id="img1_3" src="./Resources/Yacine/STAT_Donations.png">
+          <h3>9,350</h3>
+          <h4>Dons</h4>
+        </li>
+        <li>
+          <img id="img1_2" src="./Resources/Yacine/STAT_Cmpt_Projects.png">
+          <h3>2,078</h3>
+          <h4>Projets Terminés</h4>
+        </li>
+        <li>
+          <img id="img1_4" src="./Resources/Yacine/STAT_Assossiations.png">
+          <h3>283</h3>
+          <h4>Associations</h4>
+        </li>
+      </ul>
+    </div>
+  </section>
   <!-- End Part 03 -------------------------------------------------------------------->
 <script src="./Packages/JQuery-3.6.0.js"></script>
 <script src="./Packages/Aos.js"></script>
