--- a/Accueil.html
+++ b/Accueil.html
@@ -42,7 +42,7 @@
     </div>
     <div class="hero-heading">
       <h1>Découvrez comment vous pouvez faire un changement dans votre communauté.</h1>
-      <h2 id="CCM" style="cursor:pointer";>Comment ça marche ?</h2>
+      <h2 id="CCM" style="cursor:pointer";>→ Comment ça marche ? ←</h2>
       <script src="./Packages/Anime.min.js"></script>
     </div>
     <div class="closer"></div>
@@ -95,34 +95,40 @@
   <!-- Part 03 -------------------------------------------------------------------->
   <section>
     <div class="Stats">
-      <h1>Statistiques Techniques</h1>
-      <h2>Depuis nos débuts en 2016, de nombreux événements sont passées et pour montrer ce que nous avons donné à la communauté,
+      <h1 data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">Statistiques Techniques</h1>
+      <h2 data-aos="fade-up" data-aos-once="true" data-aos-offset="90" data-aos-duration="1000">Depuis nos débuts en 2016, de nombreux événements sont passées et pour montrer ce que nous avons donné à la communauté,
         nous avons rassemblé ces analyses qui représentent le travail acharné que nous faisons ici.</h2>
       <ul>
-        <li>
+        <li data-aos-id="inview" data-aos="fade-up" data-aos-once="true" data-aos-offset="50" data-aos-duration="1000">
           <img id="img1_1" src="./Resources/Yacine/STAT_Fund_Raised.png">
-          <h3>€ 73,8 M</h3>
+          <h3>€ <span class="count">0</span> M</h3>
           <h4>Fonds Levés</h4>
         </li>
-        <li>
+        <li data-aos="fade-up" data-aos-once="true" data-aos-offset="50" data-aos-duration="1000">
           <img id="img1_3" src="./Resources/Yacine/STAT_Donations.png">
-          <h3>9,350</h3>
+          <h3 class="count1">0</h3>
           <h4>Dons</h4>
         </li>
-        <li>
+        <li data-aos="fade-up" data-aos-once="true" data-aos-offset="50" data-aos-duration="1000">
           <img id="img1_2" src="./Resources/Yacine/STAT_Cmpt_Projects.png">
-          <h3>2,078</h3>
+          <h3 class="count2">0</h3>
           <h4>Projets Terminés</h4>
         </li>
-        <li>
+        <li data-aos="fade-up" data-aos-once="true" data-aos-offset="50" data-aos-duration="1000">
           <img id="img1_4" src="./Resources/Yacine/STAT_Assossiations.png">
-          <h3>283</h3>
+          <h3 class="count3">0</h3>
           <h4>Associations</h4>
         </li>
       </ul>
     </div>
   </section>
   <!-- End Part 03 -------------------------------------------------------------------->
+
+
+  <!-- Part 04 -------------------------------------------------------------------->
+  <section>
+  </section>
+  <!-- End Part 04 -------------------------------------------------------------------->
 <script src="./Packages/JQuery-3.6.0.js"></script>
 <script src="./Packages/Aos.js"></script>
 <script>
