--- a/Accueil.html
+++ b/Accueil.html
@@ -42,7 +42,7 @@
     </div>
     <div class="hero-heading">
       <h1>Découvrez comment vous pouvez faire un changement dans votre communauté.</h1>
-      <h2 id="CCM" style="cursor:pointer";>→ Comment ça marche ? ←</h2>
+      <a href="#CCM"><h2 style="cursor:pointer";>→ Comment ça marche ? ←</h2></a>
       <script src="./Packages/Anime.min.js"></script>
     </div>
     <div class="closer"></div>
@@ -126,7 +126,9 @@
 
 
   <!-- Part 04 -------------------------------------------------------------------->
-  <section>
+  <section id="CCM">
+    <div>
+    </div>
   </section>
   <!-- End Part 04 -------------------------------------------------------------------->
 <script src="./Packages/JQuery-3.6.0.js"></script>
