--- a/Accueil.html
+++ b/Accueil.html
@@ -25,7 +25,7 @@
       <div class="col-nav buttons-container-nav">
         <div class="buttons-content-nav text-btn-nav">
           <a href="#">Connexion</a>
-          <a href="#">S'Inscrire</a>
+          <a href="./Sign_In.html">S'Inscrire</a>
         </div>
       </div>
     </nav>
