--- a/Sign In Workplace/Log_In.html
+++ b/Sign In Workplace/Log_In.html
@@ -8,30 +8,12 @@
 
 
 
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel='stylesheet' href='https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.css'>
-<link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet" />
-
-
-
 </head>
 <body>
-<div class="sign_in">
-		<h1>Formulaire d'inscription</h1>
+<div class="log_in">
+		<h1>Connexion d'assossiation</h1>
 
 				<form class="login100-form validate-form">
-
-
-
-					<div class="Avatar_Drop">
-						<input type="file"
-						       class="filepond"
-						       name="filepond"
-						       accept="image/png, image/jpeg, image/gif" id="Avatar_Drop"/>
-					</div>
-
-
 
 
 					<div class="wrap-input100 validate-input" data-validate = "Un Nom d'association est requis">
@@ -42,82 +24,22 @@
 						</span>
 					</div>
 
-					<div class="wrap-input100 validate-input" data-validate = "Un Numéro de téléphone réel est requis">
-						<input class="input100" type="text" name="n_telephone" placeholder="Numéro de téléphone">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-phone" aria-hidden="true"></i>
-						</span>
-					</div>
-
-					<div class="wrap-input100 validate-input" data-validate = "Un E-mail valide est requis">
-						<input class="input100" type="text" name="email" placeholder="E-mail">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-envelope" aria-hidden="true"></i>
-						</span>
-					</div>
-
 					<div class="wrap-input100 validate-input" data-validate = "Un Mot de passe est requis">
-						<input class="input100" type="text" name="mot_de_pass" placeholder="Mot de passe">
+						<input class="input100" type="password" name="mot_de_pass" placeholder="Mot de passe">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 					</div>
 
-					<div class="wrap-input100 validate-input" data-validate = "Doit être le même que le précédent">
-						<input class="input100" type="text" name="c_mot_de_pass" placeholder="Confirmez le mot de passe">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-lock" aria-hidden="true"></i>
-						</span>
-					</div>
-
-					<div class="wrap-input100 validate-input" data-validate = "Un Lieu d'assossiation est requis">
-						<input class="input100" type="text" name="location" placeholder="Lieu d'association">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-location-arrow" aria-hidden="true"></i>
-						</span>
-					</div>
-
-
-
-
-
-					<div class="Certificate_Drop">
-						<input type="file"  name="filepond" multiple data-max-file-size="8MB" data-max-files="1" id="Certificate_Drop">
-					</div>
-
-
-
-
-
-					<div class="wrap-input100 validate-input" data-validate = "Un E-mail PayPal valide est requis">
-						<input class="input100" type="text" name="email_paypal" placeholder="E-mail PayPal">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-paypal" aria-hidden="true"></i>
-						</span>
-					</div>
-
-					<div class="wrap-input100 validate-input" data-validate = "Des coordonnées CCP valides sont requises">
-						<input class="input100" type="text" name="ccp" placeholder="N° de compte CCP - Clé CCP">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-credit-card-alt" aria-hidden="true"></i>
-						</span>
-					</div>
-
-				<div class="form_check_input">
-				<input type="checkbox"><span> J'ai lu et j'accepte les </span><a href="#">Termes et Conditions</a></input>
+				<div class="form_check_input_log_in">
+				<span>Créer un compte </span><a href="./Sign_In.html">→</a>
 				</div>
 
 
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Soumettre
+							Connexion
 						</button>
 					</div>
 
