--- a/Web_Accueil_Y.html
+++ b/Web_Accueil_Y.html
@@ -41,8 +41,8 @@
       </a>
     </div>
     <div class="hero-heading">
-      <h1>Découvrez comment vous pouvez faire un changement dans votre communauté.</h1>
-      <a href="#CCM"><h2 style="cursor:pointer";>→ Comment ça marche ? ←</h2></a>
+      <h1 style="cursor:default;">Découvrez comment vous pouvez faire un changement dans votre communauté.</h1>
+      <a href="#CCM" style="cursor:pointer";><h2>→ </h2><h2> Comment ça marche ? </h2><h2> ←</h2></a>
       <script src="./Packages/Anime.min.js"></script>
     </div>
     <div class="closer"></div>
@@ -52,7 +52,7 @@
 
   <!-- Part 02 -------------------------------------------------------------------->
   <section>
-    <div class="whiteBoard">
+    <div class="whiteBoard" style="cursor:default;">
       <h1 data-aos="fade-up" data-aos-once="true" data-aos-offset="300" data-aos-duration="1000">Bienvenue à la charité <span style="color:#2c5f2d;">help</span><span style="color:#79be21;">me</span></h1>
       <h2 data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">Nous sommes une plate-forme caritative indépendante gérée par des assossiations Algériennes certifiés,
          nous atteignons tous les coins du pays en partageant l'espoir et en donnons l'aide à tous qui ont besoin,
@@ -93,7 +93,7 @@
 
   <!-- Part 03 -------------------------------------------------------------------->
   <section>
-    <div class="Stats">
+    <div class="Stats" style="cursor:default;">
       <h1 data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">Statistiques Techniques</h1>
       <h2 data-aos="fade-up" data-aos-once="true" data-aos-offset="90" data-aos-duration="1000">Depuis nos débuts en 2016, de nombreux événements sont passées et pour montrer ce que nous avons donné à la communauté,
         nous avons rassemblé ces analyses qui représentent le travail acharné que nous faisons ici.</h2>
@@ -126,11 +126,11 @@
 
   <!-- Part 04 -------------------------------------------------------------------->
   <section id="CCM">
-    <div class="whiteBoard2">
+    <div class="whiteBoard2" style="cursor:default;">
       <h1 data-aos="fade-up" data-aos-once="true" data-aos-offset="165" data-aos-duration="1000">Comment ça marche ?</h1>
       <h2 data-aos="fade-up" data-aos-once="true" data-aos-offset="70" data-aos-duration="1000">Vous trouverez ici plus d'informations sur quel types de services nous proposons
         à nos clients et comment vous pouvez en bénéficier.</h2>
-        <div class="Steps_Association" style="cursor:default;" data-aos="fade-up" data-aos-once="true" data-aos-offset="100" data-aos-duration="5000">
+        <div class="Steps_Association" data-aos="fade-up" data-aos-once="true" data-aos-offset="100" data-aos-duration="5000">
           <!-- List Associations -------------------------------------------------------------------->
           <div class="Steps_Separator">
             <h3>Si vous êtes <span>Une Association :</span></h3>
@@ -174,7 +174,7 @@
                 <img id="img2_3" src="./Resources/Yacine/Steps_Needing_01_SL.png">
                 <img id="img2_3" src="./Resources/Yacine/Steps_Needing_01.png">
                 <h4>Visitez notre page <a href="#">d'associations</a> certifiées,
-                  choisissez une qui vous convient le mieux et contactez-les par e-mail
+                  choisissez une qui vous convient le mieux et contactez-la par e-mail
                   ou par numéro de téléphone.</h4>
               </li>
               <li>
@@ -241,7 +241,76 @@
   <!-- End Part 04 -------------------------------------------------------------------->
 
 
-  
+  <!-- Part 05 -------------------------------------------------------------------->
+  <section>
+    <div class="SlideShow" style="cursor:default;">
+      <h1 data-aos="fade-up" data-aos-once="true" data-aos-offset="160" data-aos-duration="1000">Commencez à <span style="color:#2c5f2d;">aider</span> les gens maintenant !</h1>
+      <h2 data-aos="fade-up" data-aos-once="true" data-aos-offset="70" data-aos-duration="1000">Voici des exemples des cas urgents que nous avons ,
+        choisissez celui qui vous convient et vous pouvez lui faire un don en un seul clic.</h2>
+      <div data-aos="fade-up" data-aos-once="true" data-aos-offset="400" data-aos-duration="1000">
+        <ul>
+        <li><div class="Belt">a</div></li>
+        <li><div class="Belt">b</div></li>
+        <li><div class="Belt">c</div></li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <!-- End Part 05 -------------------------------------------------------------------->
+
+
+  <!-- Part 06 -------------------------------------------------------------------->
+  <section>
+    <div class="Reviews" style="cursor:default;">
+    <h1 data-aos="fade-up" data-aos-once="true" data-aos-offset="100" data-aos-duration="1000">Que disent les gens à notre propos</h1>
+    <div data-aos="fade-up" data-aos-once="true" data-aos-offset="320" data-aos-duration="1000">
+      <!-- List Reviews 01 -------------------------------------------------------------------->
+        <ul>
+          <li>
+            <img id="Re01" src=".\Resources\Yacine\Reviews\Raouf.png">
+            <h4>"Je ne comprends pas comment nous avons fait des dons sans l'aide de cette
+              plate-forme auparavant, cela facilite grandement les dons et les demandes d'aide."</h4>
+            <h5>- Raouf Bouakkaz</h5>
+          </li>
+          <li>
+            <img id="Re01" src=".\Resources\Yacine\Reviews\Islam.png">
+            <h4>"Je ne sais pas quoi dire d'autre, les résultats de ce que font nos
+              associations ici parlent d'eux-mêmes."</h4>
+            <h5>- Islam Bouchou</h5>
+          </li>
+          <li>
+            <img id="Re01" src=".\Resources\Yacine\Reviews\Mounzir.png">
+            <h4>"Exactement ce que je cherchais. Je tiens à vous remercier personnellement
+            pour votre plate-forme exceptionnelle. Merci beaucoup pour votre aide."</h4>
+            <h5>- Abdelrahmene Mounzir</h5>
+          </li>
+        </ul>
+        <!-- List Reviews 02 -------------------------------------------------------------------->
+        <ul>
+          <li>
+            <img id="Re01" src=".\Resources\Yacine\Reviews\Chaima.png">
+            <h4>"Helpme est la vraie affaire ! Je suis vraiment impressionné à plusieurs niveaux.
+              je souhaite bon courage à nos associations et je remercie nos donneurs."</h4>
+            <h5>- Chaima Sehili</h5>
+          </li>
+          <li>
+            <img id="Re01" src=".\Resources\Yacine\Reviews\Zorgani.png">
+            <h4>"moi je comprend pas le français."</h4>
+            <h5>- Nassim Rayan Zorgani</h5>
+          </li>
+          <li>
+            <img id="Re01" src=".\Resources\Yacine\Reviews\Zaki.png">
+            <h4>"J'adore votre système. Je ne suis pas en mesure de vous dire à quel point
+              je suis heureux avec Help Me, c'est exactement ce qui manquait à notre financement
+              participatif."</h4>
+            <h5>- Yacine Dada</h5>
+          </li>
+        </ul>
+      <!-- End List Reviews -------------------------------------------------------------------->
+    </div>
+    </div>
+  </section>
+  <!-- End Part 06 -------------------------------------------------------------------->
   <script src="./Packages/JQuery-3.6.0.js"></script>
   <script src="./Packages/Aos.js"></script>
   <script>
@@ -249,6 +318,65 @@
   </script>
   <script src="./Scripts_Accueil_Y.js"></script>
 </body>
+
+
 <footer>
+  <section>
+    <div class="Footer" style="cursor:default;">
+    <div data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">
+        <ul>
+        <li>
+          <div class="Contact">
+            <h1>Liens</h1>
+            <hr class="red">
+            <div class="Links">
+              <h2><a href="#" >Accueil</a></h1>
+              <h2><a href="#" >Associations</a></h2>
+              <h2><a href="#" >Catégorie - Éducation</a></h2>
+              <h2><a href="#" >Catégorie - Santé</a></h2>
+              <h2><a href="#" >Catégorie - Autres</a></h2>
+              <h2><a href="#" >À propos de nous</a></h2>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="Contact">
+            <h1>Nos réseaux sociaux</h1>
+            <hr class="red">
+            <div class="Links">
+              <h2><a href="#" >Facebook</a></h2>
+              <h2><a href="#" >Instagram</a></h2>
+              <h2><a href="#" >Twitter</a></h2>
+              <h2><a href="#" >YouTube</a></h2>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="Contact">
+            <div class="Info">
+                <h1>Localisation</h1>
+                <hr class="red">
+                <h2>Sahat El Wiam , Sidi Bel Abbès 22000</h2>
+              <div class="Separater">
+                <h1>E-mail</h1>
+                <hr class="red">
+                <h2>Team10@esi-sba.Dz</h2>
+              </div>
+              <div class="Separater1">
+                <h1>N° Téléphone</h1>
+                <hr class="red">
+                <h2>+213 48 74 94 52</h2>
+              </div>
+            </div>
+          </div>
+        </li>
+        </ul>
+        <div class="Separater2">
+          <hr class="red">
+          <h2>© 2021 ESI-SBA Helpme. Conçu et Développé par Team10</h2>
+        </div>
+    </div>
+    </div>
+  </section>
 </footer>
 </html>
