it's 4 am and i'm tired : )

--- a/Web_Accueil_Y.html
+++ b/Web_Accueil_Y.html
@@ -19,7 +19,7 @@
           <li><a href="./Web_Accueil_Y.html">Accueil</a></li>
           <li class="open-menu-categories"><a href="#" class="selected-categories">Catégories</a></li>
           <li><a href="#">Associations</a></li>
-          <li><a href="#"><img src="./Resources/Yacine/Banner_Information.png" class="center"></a></li>
+          <li><a href="./Web_About_Us_Y.html"><img src="./Resources/Yacine/Banner_Information.png" class="center"></a></li>
         </ul>
       </div>
       <div class="col-nav buttons-container-nav">
@@ -299,7 +299,7 @@
             <h5>- Nassim Rayan Zorgani</h5>
           </li>
           <li>
-            <img id="Re01" src=".\Resources\Yacine\Reviews\Zaki.png">
+            <img id="Re01" src=".\Resources\Yacine\Reviews\Yacine.png">
             <h4>"J'adore votre système. Je ne suis pas en mesure de vous dire à quel point
               je suis heureux avec Help Me, c'est exactement ce qui manquait à notre financement
               participatif."</h4>
