--- a/Web_About_Us_Y.html
+++ b/Web_About_Us_Y.html
@@ -8,25 +8,27 @@
   <link rel="stylesheet" href="./Packages/Reset.min.css">
   <link rel="stylesheet" href="./Styles_About_Us_Y.css">
   <link rel="stylesheet" href="./Packages/Website_Fonts/Font-Awesome-4.7/css/Font-Awesome.min.css">
-  <link rel="stylesheet" href="./Packages/Aos.css">
+  <link rel="stylesheet" href="./Packages/AoS/Aos.css">
 </head>
 <body>
   <!-- Navigation Bar -------------------------------------------------------------------->
   <section class="hero">
     <nav>
-      <div class="col-nav logo-container-nav"><a href="./Web_Accueil_Y.html" class="logo-icon-nav" alt="Help me"></a></div>
+      <div class="col-nav logo-container-nav Logo_button"><a href="./Web_Accueil_Y.html" class="logo-icon-nav" alt="Help me"></a></div>
       <div class="col-nav menu-container-nav">
         <ul class="menu-content-nav text-nav">
-          <li><a href="./Web_Accueil_Y.html">Accueil</a></li>
+          <li class="accueil_button" ><a href="./Web_Accueil_Y.html">Accueil</a></li>
           <li class="open-menu-categories"><a href="#" class="selected-categories">Catégories</a></li>
-          <li><a href="#">Associations</a></li>
-          <li><a href="#"><img src="./Resources/Yacine/Banner_Information.png" class="center"></a></li>
+          <li class="association_button" ><a href="#">Associations</a></li>
+          <li class="about_us_button" ><a href="#"><img src="./Resources/Yacine/Banner_Information.png" class="center"></a></li>
         </ul>
       </div>
       <div class="col-nav buttons-container-nav">
-        <div class="buttons-content-nav text-btn-nav">
-          <a href="./Web_Log_In_Y.html">Connexion</a>
-          <a href="./Web_Sign_In_Y.html">S'Inscrire</a>
+        <div class="LS_button" >
+          <div class="buttons-content-nav text-btn-nav">
+            <a href="./Web_Log_In_Y.html">Connexion</a>
+            <a href="./Web_Sign_In_Y.html">S'Inscrire</a>
+          </div>
         </div>
       </div>
     </nav>
@@ -165,7 +167,7 @@
   </section>
   <!-- End Navigation Bar -------------------------------------------------------------------->
   <script src="./Packages/JQuery-3.6.0.js"></script>
-  <script src="./Packages/Aos.js"></script>
+  <script src="./Packages/AoS/AoS.js"></script>
   <script>
     AOS.init();
   </script>
