--- a/Web_Accueil_Y.html
+++ b/Web_Accueil_Y.html
@@ -7,25 +7,28 @@
   <meta name="description" content="Help Me est la plateforme de collecte de fonds en ligne la plus fiable. Démarrez une campagne de financement participatif en un seul clic" />
   <link rel="stylesheet" href="./Packages/Reset.min.css">
   <link rel="stylesheet" href="./Styles_Accueil_Y.css">
-  <link rel="stylesheet" href="./Packages/Aos.css">
+  <link rel="stylesheet" href="./Packages/AoS/AoS.css">
+  <link rel="stylesheet" href="./Packages/TinySlider/Tiny-Slider.css">
 </head>
 <body>
   <!-- Navigation Bar -------------------------------------------------------------------->
   <section class="hero">
     <nav>
-      <div class="col-nav logo-container-nav"><a href="./Web_Accueil_Y.html" class="logo-icon-nav" alt="Help me"></a></div>
+      <div class="col-nav logo-container-nav Logo_button"><a href="./Web_Accueil_Y.html" class="logo-icon-nav" alt="Help me"></a></div>
       <div class="col-nav menu-container-nav">
         <ul class="menu-content-nav text-nav">
-          <li><a href="./Web_Accueil_Y.html">Accueil</a></li>
+          <li class="accueil_button" ><a href="./Web_Accueil_Y.html">Accueil</a></li>
           <li class="open-menu-categories"><a href="#" class="selected-categories">Catégories</a></li>
-          <li><a href="#">Associations</a></li>
-          <li><a href="./Web_About_Us_Y.html"><img src="./Resources/Yacine/Banner_Information.png" class="center"></a></li>
+          <li class="association_button" ><a href="#">Associations</a></li>
+          <li class="about_us_button" ><a href="./Web_About_Us_Y.html"><img src="./Resources/Yacine/Banner_Information.png" class="center"></a></li>
         </ul>
       </div>
       <div class="col-nav buttons-container-nav">
-        <div class="buttons-content-nav text-btn-nav">
-          <a href="./Web_Log_In_Y.html">Connexion</a>
-          <a href="./Web_Sign_In_Y.html">S'Inscrire</a>
+        <div class="LS_button" >
+          <div class="buttons-content-nav text-btn-nav">
+            <a href="./Web_Log_In_Y.html">Connexion</a>
+            <a href="./Web_Sign_In_Y.html">S'Inscrire</a>
+          </div>
         </div>
       </div>
     </nav>
@@ -43,7 +46,7 @@
     <div class="hero-heading">
       <h1 style="cursor:default;">Découvrez comment vous pouvez faire un changement dans votre communauté.</h1>
       <a href="#CCM" style="cursor:pointer";><h2>→ </h2><h2> Comment ça marche ? </h2><h2> ←</h2></a>
-      <script src="./Packages/Anime.min.js"></script>
+      <script src="./Packages/AoS/Anime.min.js"></script>
     </div>
     <div class="closer"></div>
   </section>
@@ -247,12 +250,22 @@
       <h1 data-aos="fade-up" data-aos-once="true" data-aos-offset="160" data-aos-duration="1000">Commencez à <span style="color:#2c5f2d;">aider</span> les gens maintenant !</h1>
       <h2 data-aos="fade-up" data-aos-once="true" data-aos-offset="70" data-aos-duration="1000">Voici des exemples des cas urgents que nous avons ,
         choisissez celui qui vous convient et vous pouvez lui faire un don en un seul clic.</h2>
-      <div data-aos="fade-up" data-aos-once="true" data-aos-offset="400" data-aos-duration="1000">
-        <ul>
-        <li><div class="Belt">a</div></li>
-        <li><div class="Belt">b</div></li>
-        <li><div class="Belt">c</div></li>
-        </ul>
+      <div data-aos-id="cards" data-aos="fade-up" data-aos-once="true" data-aos-offset="400" data-aos-duration="1000">
+        <div class="my-slider">
+          <div class="Belt">
+            <img class="img_card" src="./person.png">
+            <h1>Titre</h1>
+            <h2>123 456 789 123 456 789 123 456 789 123 456 789
+            123 456 789 123 456 789 123 456 789 123 456 789 123 456 789
+            123 456 789 123 456 789 123 456 789 123 456 789 123 456 789
+            123 456 789 123 456 789 123 456</h2>
+            <div class="progress-wrap progress" data-progress-percent="44">44 %
+              <div class="progress-bar progress"></div>
+            </div>
+            <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn_card" style="cursor: pointer;">Donner</button>
+            <button type="button" class="btn_card1" style="cursor: pointer;">Détails</button>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -262,7 +275,7 @@
   <!-- Part 06 -------------------------------------------------------------------->
   <section>
     <div class="Reviews" style="cursor:default;">
-    <h1 data-aos="fade-up" data-aos-once="true" data-aos-offset="100" data-aos-duration="1000">Que disent les gens à notre propos</h1>
+    <h1 data-aos="fade-up" data-aos-once="true" data-aos-offset="100" data-aos-duration="1000">Que disent les gens à propos de nous</h1>
     <div data-aos="fade-up" data-aos-once="true" data-aos-offset="320" data-aos-duration="1000">
       <!-- List Reviews 01 -------------------------------------------------------------------->
         <ul>
@@ -312,11 +325,29 @@
   </section>
   <!-- End Part 06 -------------------------------------------------------------------->
   <script src="./Packages/JQuery-3.6.0.js"></script>
-  <script src="./Packages/Aos.js"></script>
+  <script src="./Packages/AoS/AoS.js"></script>
   <script>
     AOS.init();
   </script>
   <script src="./Scripts_Accueil_Y.js"></script>
+  <script src="./Packages/TinySlider/Tiny-Slider.js"></script>
+  <script>
+    var slider = tns({
+    container: '.my-slider',
+    fixedWidth: 350,
+    controls: false,
+    nav: false,
+    autoplayButtonOutput: false,
+    loop: true,
+    autoplay: true,
+    autoplayHoverPause: true,
+    autoplayTimeout: 1500,
+    arrowKeys: true,
+    swipeAngle: false,
+    items: 8,
+    slideBy: 1,
+    });
+  </script>
 </body>
 
 
